Made improvements to mobile, but not perfect

--- a/src/index.html
+++ b/src/index.html
@@ -2,17 +2,22 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8" />
-    <title>Strike</title>
-    <base href="/">
+  <!-- Not sure if this is fully required, but seems so for mobile. -->
+  <meta http-equiv="Cache-Control" content="max-age=0, must-revalidate" />
+  <meta http-equiv="Pragma" content="no-cache" />
+  <meta http-equiv="Expires" content="0" />
 
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+  <meta charset="utf-8" />
+  <title>Strike</title>
+  <base href="/">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 </head>
 
 <body>
-    <app-root></app-root>
+  <app-root></app-root>
 </body>
 
 </html>
